# cld3-kotlin

./: .coveralls.yml  .travis.yml  Cld3LangDetector.h  LICENSE  README.MD  README.md  pom.xml
.github/: FUNDING.yml
com/1.0.0/: cld3-kotlin-1.0.0.jar.md5  cld3-kotlin-1.0.0.jar.sha1  cld3-kotlin-1.0.0.pom.md5
com/b8/cld3-kotlin/: maven-metadata-local.xml  maven-metadata-local.xml.md5  maven-metadata-local.xml.sha1
com/b8/cld3-kotlin/1.0.0/: cld3-kotlin-1.0.0.pom  cld3-kotlin-1.0.0.pom.sha1
cpp/: CMakeLists.txt  Cld3LangDetector.cpp  main.cpp
cpp/cld_3/protos/: task_spec.pb.h
kotlin/: pom.xml
kotlin/src/main/cpp/cld3/src/: BUILD.gn  Cld3LangDetector.h  DEPS  cld3.cpp  cld3.pyx  fml_parser.h  language_identifier_features_test.cc  nnet_language_identifier.h  relevant_script_feature.cc  relevant_script_feature_test.cc  sentence_features.h
kotlin/src/main/kotlin/com/b8/: LangDetect.kt  LangDetectTest.kt
src/main/cpp/: Cld3LangDetector.cc  Cld3LangDetector.h
src/main/cpp/cld3/src/: CMakeLists.txt  feature_extractor.h  feature_extractor.pb.h  language_identifier_features.h  nnet_language_identifier.cc  relevant_script_feature.h  runner.cpp  sentence.pb.h  task_context.h
src/main/kotlin/com/b8/: LangDetect.kt  NativeLangDetector.kt  OperationSystemCoordinator.kt
src/main/lib/osx/: libc++.dylib  libnative.dylib  libprotobuf_lite.dylib
src/main/lib/osx_test/: libnative2.dylib
src/main/test/kotlin/b8/: LangDetectTest.kt
src/main/test/kotlin/com/b8/: LangDetectTest.kt  OperationSystemCoordinatorTest.kt
